# test-lz-index

./: CMakeLists.txt  README.md  build-indexes.sh  download-files.sh  locate.cpp  main.cpp
bench/: bench_display.cpp  bench_locate.cpp  display.cpp  display_pattern_len.cpp  locate.cpp  locate_pattern_len.cpp
lzi_lib/src/: LZ77.cpp  RMQ_succinct.cpp  extractor.cpp  utils.cpp
